fix header width
used to be too wide, caused horizontal scrollbar

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -123,8 +123,8 @@ header{
   background: #2A2A2A;
   color: #1d95e5;
   margin-left: calc((100% - 100vw) / 2);
-  width: 100%;
-  width: calc(100vw);
+  padding-left: calc((100vw - 100%) / 2);
+  width: calc(100%);
 
   .header-content{
     margin: 0 auto;
